--- a/behrt/behrt_NextXMonths.ipynb
+++ b/behrt/behrt_NextXMonths.ipynb
@@ -1178,11 +1178,113 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
-        "id": "bpft0UBsQPrr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bpft0UBsQPrr",
+        "outputId": "e630aa23-8a74-4988-92ce-3dac43d093f0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "metadata": {
+            "tags": null
+          },
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "WARNING:pytorch_pretrained_bert.optimization:t_total value of -1 results in schedule not being applied\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch: 0 training started...\n",
+            "epoch: 0\t| Cnt: 1\t| Samples: 128, Loss: 0.0069896125793457034\t| precision: 0.01856204629641924\n",
+            "precision : 0.43309374680149987, auroc: 0.7524628208237569,\n",
+            "Epoch: 0 completed. \t time: 76.61999583244324\n",
+            "Epoch: 1 training started...\n",
+            "epoch: 1\t| Cnt: 1\t| Samples: 128, Loss: 0.000706281065940857\t| precision: 0.44951393020687436\n",
+            "precision : 0.4581666776215011, auroc: 0.7876798993563268,\n",
+            "Epoch: 1 completed. \t time: 77.21120834350586\n",
+            "Epoch: 2 training started...\n",
+            "epoch: 2\t| Cnt: 1\t| Samples: 128, Loss: 0.0004935933649539947\t| precision: 0.4641531435762146\n",
+            "precision : 0.46247206551146014, auroc: 0.8013485099768006,\n",
+            "Epoch: 2 completed. \t time: 75.97655606269836\n",
+            "Epoch: 3 training started...\n",
+            "epoch: 3\t| Cnt: 1\t| Samples: 128, Loss: 0.0004135388508439064\t| precision: 0.4795833589232202\n",
+            "precision : 0.46413085874189286, auroc: 0.8101605449107392,\n",
+            "Epoch: 3 completed. \t time: 75.64358711242676\n",
+            "Epoch: 4 training started...\n",
+            "epoch: 4\t| Cnt: 1\t| Samples: 128, Loss: 0.00038887303322553634\t| precision: 0.5009347331533175\n",
+            "precision : 0.4646787400531555, auroc: 0.816782609081493,\n",
+            "Epoch: 4 completed. \t time: 75.54467558860779\n",
+            "Epoch: 5 training started...\n",
+            "epoch: 5\t| Cnt: 1\t| Samples: 128, Loss: 0.000351298563182354\t| precision: 0.4932612205043667\n",
+            "precision : 0.46505686308920136, auroc: 0.8211827576696308,\n",
+            "Epoch: 5 completed. \t time: 75.5818543434143\n",
+            "Epoch: 6 training started...\n",
+            "epoch: 6\t| Cnt: 1\t| Samples: 128, Loss: 0.000366864986717701\t| precision: 0.5115128074496427\n",
+            "precision : 0.46528146331589987, auroc: 0.8241069428808336,\n",
+            "Epoch: 6 completed. \t time: 75.76126170158386\n",
+            "Epoch: 7 training started...\n",
+            "epoch: 7\t| Cnt: 1\t| Samples: 128, Loss: 0.00033250484615564345\t| precision: 0.5035601657627077\n",
+            "precision : 0.46537129475082567, auroc: 0.8264048118794645,\n",
+            "Epoch: 7 completed. \t time: 75.34929203987122\n",
+            "Epoch: 8 training started...\n",
+            "epoch: 8\t| Cnt: 1\t| Samples: 128, Loss: 0.0003508308529853821\t| precision: 0.5034105550930104\n",
+            "precision : 0.465572887447612, auroc: 0.8283714030940837,\n",
+            "Epoch: 8 completed. \t time: 75.84688591957092\n",
+            "Epoch: 9 training started...\n",
+            "epoch: 9\t| Cnt: 1\t| Samples: 128, Loss: 0.00034861881285905836\t| precision: 0.48742137331487145\n",
+            "precision : 0.46559595817858557, auroc: 0.8297601374094838,\n",
+            "Epoch: 9 completed. \t time: 75.39097595214844\n",
+            "Epoch: 10 training started...\n",
+            "epoch: 10\t| Cnt: 1\t| Samples: 128, Loss: 0.0003163576126098633\t| precision: 0.5202880000038794\n",
+            "precision : 0.4656242149993979, auroc: 0.8307274059230066,\n",
+            "Epoch: 10 completed. \t time: 75.70859503746033\n",
+            "Epoch: 11 training started...\n",
+            "epoch: 11\t| Cnt: 1\t| Samples: 128, Loss: 0.0003586724027991295\t| precision: 0.4886590003771775\n",
+            "precision : 0.4657042074734386, auroc: 0.8315619347670175,\n",
+            "Epoch: 11 completed. \t time: 75.60650420188904\n",
+            "Epoch: 12 training started...\n",
+            "epoch: 12\t| Cnt: 1\t| Samples: 128, Loss: 0.0003270764648914337\t| precision: 0.5043437113095124\n",
+            "precision : 0.4656868537583196, auroc: 0.8322715268309819,\n",
+            "Epoch: 12 completed. \t time: 75.40290832519531\n",
+            "Epoch: 13 training started...\n",
+            "epoch: 13\t| Cnt: 1\t| Samples: 128, Loss: 0.00032232433557510376\t| precision: 0.5229631409302764\n",
+            "precision : 0.46569914923854655, auroc: 0.8327469573707108,\n",
+            "Epoch: 13 completed. \t time: 75.23784685134888\n",
+            "Epoch: 14 training started...\n",
+            "epoch: 14\t| Cnt: 1\t| Samples: 128, Loss: 0.0003113972209393978\t| precision: 0.5065969422771561\n",
+            "precision : 0.465797507042398, auroc: 0.8331518383777825,\n",
+            "Epoch: 14 completed. \t time: 75.29441547393799\n",
+            "Epoch: 15 training started...\n",
+            "epoch: 15\t| Cnt: 1\t| Samples: 128, Loss: 0.0002874577417969704\t| precision: 0.5320632572164704\n",
+            "precision : 0.46576543144246224, auroc: 0.8336563409906986,\n",
+            "Epoch: 15 completed. \t time: 75.29016780853271\n",
+            "Epoch: 16 training started...\n",
+            "epoch: 16\t| Cnt: 1\t| Samples: 128, Loss: 0.00033417753875255587\t| precision: 0.5186309342198281\n",
+            "precision : 0.4657471004558768, auroc: 0.8337933193143274,\n",
+            "Epoch: 16 completed. \t time: 75.23083901405334\n",
+            "Epoch: 17 training started...\n",
+            "epoch: 17\t| Cnt: 1\t| Samples: 128, Loss: 0.0003018582984805107\t| precision: 0.5175145754453161\n",
+            "precision : 0.4659287745542459, auroc: 0.834147704859569,\n",
+            "Epoch: 17 completed. \t time: 75.54245853424072\n",
+            "Epoch: 18 training started...\n",
+            "epoch: 18\t| Cnt: 1\t| Samples: 128, Loss: 0.0003484055399894714\t| precision: 0.4939013374417049\n",
+            "precision : 0.46569412622732304, auroc: 0.8342600884169393,\n",
+            "Epoch: 18 completed. \t time: 75.14112281799316\n",
+            "Epoch: 19 training started...\n",
+            "epoch: 19\t| Cnt: 1\t| Samples: 128, Loss: 0.00032630033791065217\t| precision: 0.5278790935094198\n",
+            "precision : 0.46573703611150097, auroc: 0.8344380226231912,\n",
+            "Epoch: 19 completed. \t time: 75.7324070930481\n",
+            "Best pre=0.512, auroc: 0\n"
+          ]
+        }
+      ],
       "source": [
         "import warnings\n",
         "import time\n",
